--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
     package="com.sunnyweather.android">
 
     <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:name=".SunnyWeatherApplication"
         android:allowBackup="true"
@@ -15,6 +16,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.SunnyWeather"
         tools:targetApi="31">
+        <activity
+            android:name=".ui.weather.WeatherActivity"
+            android:exported="true" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
